--- a/노드 리스트 모음.md
+++ b/노드 리스트 모음.md
@@ -102,35 +102,35 @@
 
 
 ### 기타 이벤트 및 상태 (Other Events and States)
-`/amcl/transition_event: AMCL 상태 전환 이벤트
+`/amcl/transition_event`: AMCL 상태 전환 이벤트
 
-`/behavior_server/transition_event: 행동 서버의 상태 전환 이벤트
+`/behavior_server/transition_event`: 행동 서버의 상태 전환 이벤트
 
-`/bt_navigator/transition_event: 행동 트리 네비게이터의 상태 전환 이벤트
+`/bt_navigator/transition_event`: 행동 트리 네비게이터의 상태 전환 이벤트
 
-`/controller_server/transition_event: 컨트롤러 서버의 상태 전환 이벤트
+`/controller_server/transition_event`: 컨트롤러 서버의 상태 전환 이벤트
 
-`/planner_server/transition_event: 경로 계획 서버의 상태 전환 이벤트
+`/planner_server/transition_event`: 경로 계획 서버의 상태 전환 이벤트
 
-`/smoother_server/transition_event: 속도 조정 서버의 상태 전환 이벤트
+`/smoother_server/transition_event`: 속도 조정 서버의 상태 전환 이벤트
 
-`/velocity_smoother/transition_event: 속도 최적화 서버의 상태 전환 이벤트
+`/velocity_smoother/transition_event`: 속도 최적화 서버의 상태 전환 이벤트
 
-`/bond: 로봇과 시스템 간의 연결 상태 (예: 연결/끊기)
+`/bond`: 로봇과 시스템 간의 연결 상태 (예: 연결/끊기)
 
-`/brightness: 화면 밝기 관련 정보
+`/brightness`: 화면 밝기 관련 정보
 
-`/parameter_events: 파라미터 변경 이벤트
+`/parameter_events`: 파라미터 변경 이벤트
 
-`/rosout: 로그 및 디버깅 출력
+`/rosout`: 로그 및 디버깅 출력
 
-`/scan: 라이다 센서의 스캔 데이터 (거리 측정)
+`/scan`: 라이다 센서의 스캔 데이터 (거리 측정)
 
-`/tf: 변환 데이터 (좌표계 간 변환 정보)
+`/tf`: 변환 데이터 (좌표계 간 변환 정보)
 
-`/tf_static: 정적인 변환 데이터 (변환이 변하지 않는 경우)
+`/tf_static`: 정적인 변환 데이터 (변환이 변하지 않는 경우)
 
-`/marker: 시각화 마커 데이터 (로봇 환경에서 객체를 표시하는 정보)
+`/marker`: 시각화 마커 데이터 (로봇 환경에서 객체를 표시하는 정보)
 
 
 # 토픽 전체 리스트
